examples/mood/tests/evaluate/too_few_arguments.mood
fn sum(a: f64, b: f64): f64 {
    a + b
}

pub fn test(): f64 {
    sum(1_f64)
}